deploy/k8s/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-scoring-fe
spec:
  replicas: 1
